--- a/public/assets/css/body-center.css
+++ b/public/assets/css/body-center.css
@@ -1,1 +1,2 @@
-body{display: flex !important;justify-content: center !important;align-items: center !important;}
+body,main{display: flex !important;flex-direction: column !important;justify-content: center !important;align-items: center !important;}
+main {flex-grow: 1;}
