--- a/views/account.ejs
+++ b/views/account.ejs
@@ -59,6 +59,7 @@
                     <h5 class="card-title"><i class="bi bi-book"></i> Kitaplar</h5>
                     <p class="card-text">Toplam <%= statistics.totalBooks %> kitap</p>
                     <a href="/books" class="btn btn-light">Tümünü Görüntüle</a>
+                    <a href="/account/myfavorites" class="btn btn-light"><i class="bi bi-star-fill text-warning"></i> Favorilerim (<%= statistics.totalFavorites %>)</a>
                 </div>
             </div>
         </div>
@@ -106,7 +107,7 @@
                             <label for="deleteUserPasswordInput"> Mevcut Şifreniz <span class="text-danger">*</span></label>
                         </div>
                         <div class="row mb-2">
-                            <div class="col text-danger">(*) zorunlu</div>
+                            <div class="col">(<span class="text-danger">*</span>) zorunlu</div>
                         </div>
                         <button class="btn bg-danger text-light w-100" type="submit">Hesabımı Sil</button>
                     </form>
@@ -126,7 +127,10 @@
             <button class="nav-link" id="avatar-tab" data-bs-toggle="tab" data-bs-target="#avatar-tab-pane" type="button" role="tab" aria-controls="avatar-tab-pane" aria-selected="false"><i class="bi bi-person-square"></i> Avatarını Değiştir</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="password-tab" data-bs-toggle="tab" data-bs-target="#password-tab-pane" type="button" role="tab" aria-controls="password-tab-pane" aria-selected="false"><i class="bi bi-lock-fill"></i> Şifre İşlemleri</button>
+            <button class="nav-link" id="password-tab" data-bs-toggle="tab" data-bs-target="#password-tab-pane" type="button" role="tab" aria-controls="password-tab-pane" aria-selected="false"><i class="bi bi-lock-fill text-danger"></i> Şifre İşlemleri</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="security-tab" data-bs-toggle="tab" data-bs-target="#security-tab-pane" type="button" role="tab" aria-controls="security-tab-pane" aria-selected="false"><i class="bi bi-shield-fill-check text-success"></i> Hesap Güvenliği</button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="other-tab" data-bs-toggle="tab" data-bs-target="#other-tab-pane" type="button" role="tab" aria-controls="other-tab-pane" aria-selected="false"><i class="bi bi-three-dots"></i> Diğer İşlemler</button>
@@ -165,7 +169,7 @@
             </div>
         
             <div class="row mb-2">
-                <div class="col text-danger">(*) zorunlu</div>
+                <div class="col">(<span class="text-danger">*</span>) zorunlu</div>
             </div>
             <button class="btn bg-success text-light w-100" type="submit">Değişiklikleri Kaydet</button>
         </form>
@@ -174,7 +178,7 @@
         <ul class="list-group my-3">
             <li class="list-group-item active">Avatarını Değiştir</li>
             <li class="list-group-item">
-                <select class="form-select avatar-select" aria-label="Default select example">
+                <select class="form-select avatar-select" aria-label="Default select change">
                     <option selected>Değiştirmek için tıklayın</option>
                     <option value="0">Sevimli Kedi</option>
                     <option value="1">Sarı Ördek</option>
@@ -213,7 +217,7 @@
                     <input type="password" name="userPassword" class="form-control user-password-input" id="userPasswordInput" placeholder="Enter Your Current Password" data-toggle-id="1" required>
                     <label for="userPasswordInput"> Mevcut Şifreniz <span class="text-danger">*</span></label>
                 </div>
-                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
+                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #f0f0f0;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
             </div>
 
             <div class="input-group mb-3">
@@ -221,7 +225,7 @@
                     <input type="password" name="userNewPassword" class="form-control user-password-input" id="userNewPasswordInput" placeholder="Enter Your Password" data-toggle-id="2" required>
                     <label for="userNewPasswordInput">Şifreniz <span class="text-danger">*</span></label>
                 </div>
-                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="2" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill" data-toggle-id="2"></i></button>
+                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="2" style="background-color: #f0f0f0;"><i class="bi bi-eye-fill" data-toggle-id="2"></i></button>
             </div>
             <div class="row password-validator my-1">
                 <div class="row">
@@ -239,12 +243,23 @@
                 </div>
             </div>
             <div class="row mb-2">
-                <div class="col text-danger">(*) zorunlu</div>
+                <div class="col">(<span class="text-danger">*</span>) zorunlu</div>
             </div>
             <button class="btn bg-primary text-light w-100" type="submit">Şifreni Değiştir</button>
         </form>
     </div>
-    <div class="tab-pane fade" id="other-tab-pane" role="tabpanel" aria-labelledby="other-tab" tabindex="3">
+    <div class="tab-pane fade" id="security-tab-pane" role="tabpanel" aria-labelledby="security-tab" tabindex="3">
+        <div class="row my-3">
+            <div class="col">
+                <ul class="list-group mb-3">
+                    <li class="list-group-item active" aria-current="true">Her Yerden Oturumunu Kapat</li>
+                    <li class="list-group-item"><a class="link-primary link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/logout-all"><i class="bi bi-person-fill-x"></i> Tüm Oturumlarından Çıkış Yap</a></li>
+                    <li class="list-group-item">Tüm cihazlardan çıkış yapılır.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="other-tab-pane" role="tabpanel" aria-labelledby="other-tab" tabindex="4">
         <div class="row my-3">
             <div class="col">
                 <ul class="list-group mb-3">
@@ -262,7 +277,6 @@
     </div>
     </div>
 </main>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/error.js"></script>
 <script src="/assets/js/account.js"></script>
 <script src="/assets/js/passwordShowHide.js"></script>
