--- a/views/admin/books.ejs
+++ b/views/admin/books.ejs
@@ -12,7 +12,7 @@
         <% if(books.length > 0) { %>
             <div class="row my-2">
                 <div class="col">
-                    <btn class="btn bg-primary text-light w-100" role="button" onclick="window.print()"><i class="bi bi-printer"></i> Listeyi Yazdır</btn>
+                    <btn class="btn print-btn bg-primary text-light w-100" role="button"><i class="bi bi-printer"></i> Listeyi Yazdır</btn>
                 </div>
             </div>
             <ul class="list-group rounded-3 print">
@@ -27,7 +27,7 @@
                                 <div class="col-12"><strong>Yazar: </strong><%= book.author %></div>
                             </div>
                             <div class="row">
-                                <div class="col-12"><strong>Fiyat: </strong><%= book.price + " TL" %></div>
+                                <div class="col-12"><strong>Kategori: </strong><%= book.category_name %></div>
                             </div>
                             <div class="row">
                                 <div class="col-12"><strong>Eklenme Tarihi: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></div>
@@ -36,13 +36,13 @@
                         <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
                             <div class="row d-flex flex-column flex-sm-row justify-content-end align-items-center g-1">
                                 <div class="col">
-                                    <a href="/books/<%= book.id %>" class="btn bg-success"><i class="bi bi-box-arrow-right text-light"></i></a>
+                                    <a href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>" class="btn bg-success" title="Kitabı Görüntüle"><i class="bi bi-box-arrow-right text-light"></i></a>
                                 </div>
                                 <div class="col">
-                                    <a href="/books/edit-book/<%= book.id %>" class="btn bg-warning"><i class="bi bi-pencil-square"></i></a>
+                                    <a href="/books/edit-book/<%= book.id %>" class="btn bg-warning" title="Kitabı Düzenle"><i class="bi bi-pencil-square"></i></a>
                                 </div>
                                 <div class="col">
-                                    <a href="/books/delete-book/<%= book.id %>" class="btn bg-danger text-light"><i class="bi bi-trash"></i></a>
+                                    <a href="/books/delete-book/<%= book.id %>" class="btn bg-danger text-light" title="Kitabı Sil"><i class="bi bi-trash"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -54,5 +54,4 @@
 
     </div>
 </main>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/error.js"></script>
