--- a/views/book-detail.ejs
+++ b/views/book-detail.ejs
@@ -1,18 +1,50 @@
-<main class="container-md py-4">
+<main class="container-md py-4" data-book-id="<%= book.id %>">
     <div class="d-flex align-items-center mb-3 no-print">
         <a href="/books" class="btn btn-primary d-inline"><i class="bi bi-arrow-left"></i> Geri</a>
         <h1 class="d-inline m-auto ms-2">Kitap Detayı</h1>
     </div>
 
+    <% if(!isAuthenticated) { %>
+        <div class="alert alert-warning my-2" role="alert">
+            Yorum yazmak, kitapları favorilerine eklemek gibi birçok özelliğe erişmek için lütfen <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/login">giriş yapın</a>
+        </div>
+    <% } %>
     <div class="container-fluid position-relative bg-white mb-5 border border-dark-subtle rounded-3 p-3 print">
-        <btn class="btn position-absolute top-0 end-0 bg-primary text-light m-1" role="button" onclick="window.print()"><i class="bi bi-printer"></i> Yazdır</btn>
+        <div class="row">
+            <% if(isAuthenticated) { %>
+                <div class="col-6 col-sm-8 text-start">
+                    <% if(!isFavorite) { %>
+                        <button class="responsive-text btn add-favorite-btn fs-4" type="button"><i class="bi bi-star text-warning"></i> Favorilerime Ekle</button>
+                        <button class="responsive-text btn delete-favorite-btn fs-4 d-none" type="button"><i class="bi bi-star-fill text-warning"></i> Favorilerimden Çıkar</button>
+                    <% } else { %>
+                        <button class="responsive-text btn delete-favorite-btn fs-4" type="button"><i class="bi bi-star-fill text-warning"></i> Favorilerimden Çıkar</button>
+                        <button class="responsive-text btn add-favorite-btn fs-4 d-none" type="button"><i class="bi bi-star text-warning"></i> Favorilerime Ekle</button>
+                    <% } %>
+                </div>
+                <div class="col-6 col-sm-4 text-end">
+                    <button class="btn print-btn bg-primary text-light" role="button"><i class="bi bi-printer"></i> Yazdır</button>
+                </div>
+            <% } else { %>
+                <div class="col text-end">
+                    <button class="btn print-btn bg-primary text-light" role="button"><i class="bi bi-printer"></i> Yazdır</button>
+                </div>
+            <% } %>
+        </div>
         <div class="row mt-3">
-            <h1><%= book.name %></h1>
+            <h1 class="display-1 fw-bold"><%= book.name %></h1>
+        </div>
+        <div class="row mt-4">
+            <div class="col">
+                <span class="text-bg-warning rounded p-2"><strong><i class="bi bi-star-fill text-white"></i> Toplam <%= book.favorites_count > 0 ? book.favorites_count : 0 %> kişi favoriledi</strong></span>
+            </div>
         </div>
         <div class="container-fluid mt-3">
-            <div class="row row-cols-1 row-cols-md-2 mb-3">
-                <div class="col mb-1 mb-md-auto">
+            <div class="row row-cols-1 row-cols-md-3 g-1 mb-3">
+                <div class="col mb-md-auto">
                     <span><strong>Yazar: </strong> <%= book.author %></span>
+                </div>
+                <div class="col">
+                    <span><strong>Kategori: </strong> <%= book.category_name %></span>
                 </div>
                 <div class="col">
                     <span><strong>Kitap Eklenme Tarihi: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></span>
@@ -22,11 +54,6 @@
                 <div class="col">
                     <h3>Kitap Açıklaması</h3>
                     <%= book.description %>
-                </div>
-            </div>
-            <div class="row my-2">
-                <div class="col rounded-3 fs-4">
-                    <strong>Fiyat: </strong><%= book.price %><span> TL</span>
                 </div>
             </div>
 
@@ -56,16 +83,49 @@
         <div class="comments-field my-3">
             <% if(comments.length > 0) { %>
                 <% comments.forEach(comment => { %>
-                    <div class="card my-1 w-100">
+                    <div class="card my-1 w-100" data-comment-id="<%= comment.id %>">
                         <div class="card-body">
                             <h5 class="card-title comment-user-name"><img class="rounded-circle avatar-img" src="/assets/img/avatars/<%= comment.avatar %>.png" width="48" loading="lazy"> <%= comment.name %> <span class="card-subtitle text-muted comment-date">- <%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></span></h5>
                             <p class="card-text comment-text"><%= comment.comment %></p>
+                            <div>
+                                <% const likes = isLiked.find(like => like.comment_id === comment.id); %>
+                                <% const dislikes = isDisliked.find(dislike => dislike.comment_id === comment.id); %>
+                                <% if(likes) { %>
+                                    <button class="add-like-btn btn p-0" type="button" data-like-dislike="like"><i class="bi bi-hand-thumbs-up-fill text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
+                                    <button class="add-dislike-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-down text-primary"></i> <span class="dislike-count"><%= comment.total_dislikes %></span></button>
+                                <% } else if(dislikes) { %>
+                                    <button class="add-like-btn btn p-0" type="button" data-like-dislike="dislike"><i class="bi bi-hand-thumbs-up text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
+                                    <button class="add-dislike-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-down-fill text-primary"></i> <span class="dislike-count"><%= comment.total_dislikes %></span></button>
+                                <% } else { %>
+                                    <button class="add-like-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-up text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
+                                    <button class="add-dislike-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-down text-primary"></i> <span class="dislike-count"><%= comment.total_dislikes %></span></button>
+                                <% } %>
+                            </div>
                         </div>   
                     </div>                   
                 <% }); %>
             <% } %>
         </div>
     </div>
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Book",
+          "name": "<%= book.name %>",
+          "author": {
+            "@type": "Person",
+            "name": "<%= book.author %>"
+          },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.7",
+            "reviewCount": "952"
+          }
+        }
+    </script>
+        
 </main>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/comment.js"></script>
+<script src="/assets/js/likesDislikes.js"></script>
+<script src="/assets/js/favorites.js"></script>
