--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header.ejs") %>
 
 <%- body %>
-
+<%- include("../partials/loading-popup.ejs") %>
 <%- include("../partials/footer.ejs") %>
