--- a/views/login.ejs
+++ b/views/login.ejs
@@ -50,11 +50,11 @@
                     <input type="password" name="userPassword" class="form-control user-password-input" id="userPasswordInput" placeholder="Enter Your Password" data-toggle-id="1" required>
                     <label for="userPasswordInput">Şifreniz <span class="text-danger">*</span></label>
                 </div>
-                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
+                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #f0f0f0;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
             </div>
             
             <div class="row mb-2">
-                <div class="col text-danger">(*) zorunlu</div>
+                <div class="col">(<span class="text-danger">*</span>) zorunlu</div>
             </div>
             <button class="btn bg-primary text-light w-100" type="submit">Giriş Yap</button>
         </form>
@@ -63,6 +63,5 @@
         </div>
     </div>
 </main>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/error.js"></script>
 <script src="/assets/js/passwordShowHide.js"></script>
