--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -5,11 +5,18 @@
     </div>
     <div class="container-fluid my-1 alert-deleted d-none">
         <div class="alert alert-success" role="alert">
-            Yorumunuz başarıyla silindi
+            Kitap başarıyla silindi
         </div>
     </div>
     <div class="my-comments-field my-3">
         <% if(books.length > 0) { %>
+            <div class="search-field input-group mb-3">
+                <div class="form-floating">
+                    <input type="text" class="form-control card-search-input" id="searchCommentInput" placeholder="Search comment">
+                    <label for="searchCommentInput">Eklediğin Kitaplarda Ara</label>
+                </div>
+                <button class="btn clear-card-search-btn" type="button" style="background-color: #f0f0f0;"><i class="bi bi-x-lg"></i></button>
+            </div>
             <% books.forEach(book => { %>
                 <div class="card my-1 w-100">
                     <div class="card-body">
@@ -22,7 +29,7 @@
                                     <div class="col-12"><strong>Yazar: </strong><%= book.author %></div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-12"><strong>Fiyat: </strong><%= book.price + " TL" %></div>
+                                    <div class="col-12"><strong>Kategori: </strong><%= book.category_name %></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12"><strong>Eklediğim Tarih: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></div>
@@ -31,13 +38,13 @@
                             <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
                                 <div class="row d-flex flex-column flex-sm-row justify-content-end align-items-center g-1">
                                     <div class="col">
-                                        <a href="/books/<%= book.id %>" class="btn bg-success"><i class="bi bi-box-arrow-right text-light"></i></a>
+                                        <a href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>" class="btn bg-success" title="Kitabı Görüntüle"><i class="bi bi-box-arrow-right text-light"></i></a>
                                     </div>
                                     <div class="col">
-                                        <a href="/books/edit-book/<%= book.id %>" class="btn bg-warning"><i class="bi bi-pencil-square"></i></a>
+                                        <a href="/books/edit-book/<%= book.id %>" class="btn bg-warning" title="Kitabı Düzenle"><i class="bi bi-pencil-square"></i></a>
                                     </div>
                                     <div class="col">
-                                        <a href="/books/delete-book/<%= book.id %>" class="btn bg-danger text-light"><i class="bi bi-trash"></i></a>
+                                        <a href="/books/delete-book/<%= book.id %>" class="btn bg-danger text-light" title="Kitabı Sil"><i class="bi bi-trash"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -48,4 +55,4 @@
         <% } %>
     </div>
 </main>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/js/cardSearch.js"></script>
