--- a/views/mycomments.ejs
+++ b/views/mycomments.ejs
@@ -10,13 +10,20 @@
     </div>
     <div class="my-comments-field my-3">
         <% if(comments.length > 0) { %>
+            <div class="search-field input-group mb-3">
+                <div class="form-floating">
+                    <input type="text" class="form-control card-search-input" id="searchCommentInput" placeholder="Search comment">
+                    <label for="searchCommentInput">Kendi Yorumlarında Ara</label>
+                </div>
+                <button class="btn clear-card-search-btn" type="button" style="background-color: #f0f0f0;"><i class="bi bi-x-lg"></i></button>
+            </div>
             <% comments.forEach(comment => { %>
                 <div class="card my-1 w-100">
                     <div class="card-body">
                         <div class="row">
                             <div class="col-8 col-sm-7 col-md-6 text-start">
                                 <div class="row">
-                                    <div class="col-12"><h5 class="card-title comment-user-name"><%= comment.name %> <span class="card-subtitle text-muted comment-date">- <%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></span></h5></div>
+                                    <div class="col-12"><h5 class="card-title comment-user-name"><img class="rounded-circle avatar-img" src="/assets/img/avatars/<%= comment.avatar %>.png" width="48" loading="lazy"> <%= comment.name %> <span class="card-subtitle text-muted comment-date">- <%= new Date(comment.created_at + ' UTC').toLocaleString('tr-TR', {day: 'numeric',month: 'long',year: 'numeric',hour: '2-digit',minute: '2-digit',timeZone: 'Asia/Istanbul',}) %></span></h5></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-12"><p class="card-text comment-text"><%= comment.comment %></p></div>
@@ -26,7 +33,7 @@
                             <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
                                 <div class="row d-flex flex-column flex-sm-row justify-content-end align-items-center g-1">
                                     <div class="col">
-                                        <a href="javascript:void(0)" class="delete-comment btn bg-danger text-light" data-comment-id="<%= comment.id %>"><i class="bi bi-trash"></i></a>
+                                        <a href="javascript:void(0)" class="delete-comment btn bg-danger text-light" data-comment-id="<%= comment.id %>" title="Yorumunu Sil"><i class="bi bi-trash"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -37,5 +44,5 @@
         <% } %>
     </div>
 </main>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/mycomments.js"></script>
+<script src="/assets/js/cardSearch.js"></script>
