--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,11 @@
+<footer class="p-3">
+  <div class="container-fluid">
+    <div class="row text-center">
+      <div class="col">book.ekinn.site developed by <b>Ekin</b>, <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="https://github.com/LordOfTheNight62" target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i> GitHub</a></div>
+    </div>
+  </div>
+</footer>
+<script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/js/main.js"></script>
 </body>
 </html>
