--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,14 +24,19 @@
     <div class="container-fluid my-1">
         <form action="/register" method="POST" class="form-floating my-3">
             <h2 class="display-2 mb-3 text-center">Üye Ol</h2>
-            <div class="form-floating mb-3">
-                <input type="text" name="userName" class="form-control" id="userNameInput" placeholder="Enter Your Name" required>
-                <label for="userNameInput">Adınız <span class="text-danger">*</span></label>
-            </div>
-
-            <div class="form-floating mb-3">
-                <input type="text" name="userSurname" class="form-control" id="userSurnameInput" placeholder="Enter Your Surname" required>
-                <label for="userSurnameInput">Soyadınız <span class="text-danger">*</span></label>
+            <div class="row row-cols-1 row-cols-md-2">
+                <div class="col">
+                    <div class="form-floating mb-3">
+                        <input type="text" name="userName" class="form-control" id="userNameInput" placeholder="Enter Your Name" required>
+                        <label for="userNameInput">Adınız <span class="text-danger">*</span></label>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="form-floating mb-3">
+                        <input type="text" name="userSurname" class="form-control" id="userSurnameInput" placeholder="Enter Your Surname" required>
+                        <label for="userSurnameInput">Soyadınız <span class="text-danger">*</span></label>
+                    </div>
+                </div>
             </div>
 
             <div class="form-floating mb-3">
@@ -44,7 +49,7 @@
                     <input type="password" name="userPassword" class="form-control user-password-input" id="userPasswordInput" placeholder="Enter Your Password" data-toggle-id="1" required>
                     <label for="userPasswordInput">Şifreniz <span class="text-danger">*</span></label>
                 </div>
-                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
+                <button class="btn password-show-hide-toggle" type="button" data-toggle-id="1" style="background-color: #f0f0f0;"><i class="bi bi-eye-fill" data-toggle-id="1"></i></button>
             </div>
             <div class="row password-validator my-1">
                 <div class="row">
@@ -65,7 +70,7 @@
                 <div class="col">Üye olarak <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="javascript:void(0)">Kullanıcı Sözleşmesini</a> kabul etmiş olursun.</div>
             </div>
             <div class="row mb-2">
-                <div class="col text-danger">(*) zorunlu</div>
+                <div class="col">(<span class="text-danger">*</span>) zorunlu</div>
             </div>
             <button class="btn bg-primary text-light w-100" type="submit">Üye Ol</button>
         </form>
@@ -74,7 +79,6 @@
         </div>
     </div>
 </main>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/error.js"></script>
 <script src="/assets/js/register.js"></script>
 <script src="/assets/js/passwordShowHide.js"></script>
