--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,6 +13,12 @@
                     Bu eposta adresi zaten kayıtlı, lütfen başka bir eposta adresi deneyin!
                 </div>
             </div>
+        <% } else if(query.message === "invalid-recaptcha") { %>
+            <div class="container-fluid">
+                <div class="alert alert-danger" role="alert">
+                    Robot olmadığınız doğrulanamadı!
+                </div>
+            </div>
         <% } else if(query.message === "invalid-password") { %>
             <div class="container-fluid">
                 <div class="alert alert-danger" role="alert">
@@ -72,13 +78,15 @@
             <div class="row mb-2">
                 <div class="col">(<span class="text-danger">*</span>) zorunlu</div>
             </div>
-            <button class="btn bg-primary text-light w-100" type="submit">Üye Ol</button>
+            <div class="g-recaptcha" data-sitekey="6LfNC5gqAAAAAM4JQ56pl9b8RwlP0UQm3dTlfOrV"></div>
+            <button class="btn bg-primary text-light w-100 mt-2" type="submit">Üye Ol</button>
         </form>
         <div class="row">
             <div class="col">Zaten üye misin? <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/login">Hemen giriş yap</a></div>
         </div>
     </div>
 </main>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="/assets/js/error.js"></script>
 <script src="/assets/js/register.js"></script>
 <script src="/assets/js/passwordShowHide.js"></script>
