--- a/src/views/book-detail.ejs
+++ b/src/views/book-detail.ejs
@@ -95,10 +95,10 @@
                                     <% dislikes = isDisliked.find(dislike => dislike.comment_id === comment.id); %>
                                 <% } %>
                                 <% if(typeof likes !== 'undefined' && likes) { %>
-                                    <button class="add-like-btn btn p-0" type="button" data-like-dislike="like"><i class="bi bi-hand-thumbs-up-fill text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
+                                    <button class="add-like-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-up-fill text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
                                     <button class="add-dislike-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-down text-danger"></i> <span class="dislike-count"><%= comment.total_dislikes %></span></button>
                                 <% } else if(typeof dislikes !== 'undefined' && dislikes) { %>
-                                    <button class="add-like-btn btn p-0" type="button" data-like-dislike="dislike"><i class="bi bi-hand-thumbs-up text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
+                                    <button class="add-like-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-up text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
                                     <button class="add-dislike-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-down-fill text-danger"></i> <span class="dislike-count"><%= comment.total_dislikes %></span></button>
                                 <% } else { %>
                                     <button class="add-like-btn btn p-0" type="button"><i class="bi bi-hand-thumbs-up text-primary"></i> <span class="like-count"><%= comment.total_likes %></span></button>
