--- a/src/views/account.ejs
+++ b/src/views/account.ejs
@@ -121,19 +121,19 @@
     <% } %>
     <ul class="nav nav-tabs align-items-center" id="accountTabs" role="tablist">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="personalInfo-tab" data-bs-toggle="tab" data-bs-target="#personalInfo-tab-pane" type="button" role="tab" aria-controls="personalInfo-tab-pane" aria-selected="true"><i class="bi bi-file-person"></i> Kişisel Bilgiler</button>
+            <button class="nav-link active" id="personalInfo-tab" data-bs-toggle="tab" data-bs-target="#personalInfo-tab-pane" type="button" role="tab" aria-controls="personalInfo-tab-pane" aria-selected="true"><i class="bi bi-file-person text-danger"></i> Kişisel Bilgiler</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="avatar-tab" data-bs-toggle="tab" data-bs-target="#avatar-tab-pane" type="button" role="tab" aria-controls="avatar-tab-pane" aria-selected="false"><i class="bi bi-person-square"></i> Avatarını Değiştir</button>
+            <button class="nav-link" id="avatar-tab" data-bs-toggle="tab" data-bs-target="#avatar-tab-pane" type="button" role="tab" aria-controls="avatar-tab-pane" aria-selected="false"><i class="bi bi-person-square text-info"></i> Avatarını Değiştir</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="password-tab" data-bs-toggle="tab" data-bs-target="#password-tab-pane" type="button" role="tab" aria-controls="password-tab-pane" aria-selected="false"><i class="bi bi-lock-fill text-danger"></i> Şifre İşlemleri</button>
+            <button class="nav-link" id="password-tab" data-bs-toggle="tab" data-bs-target="#password-tab-pane" type="button" role="tab" aria-controls="password-tab-pane" aria-selected="false"><i class="bi bi-lock-fill text-warning"></i> Şifre İşlemleri</button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="security-tab" data-bs-toggle="tab" data-bs-target="#security-tab-pane" type="button" role="tab" aria-controls="security-tab-pane" aria-selected="false"><i class="bi bi-shield-fill-check text-success"></i> Hesap Güvenliği</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="other-tab" data-bs-toggle="tab" data-bs-target="#other-tab-pane" type="button" role="tab" aria-controls="other-tab-pane" aria-selected="false"><i class="bi bi-three-dots"></i> Diğer İşlemler</button>
+            <button class="nav-link" id="other-tab" data-bs-toggle="tab" data-bs-target="#other-tab-pane" type="button" role="tab" aria-controls="other-tab-pane" aria-selected="false"><i class="bi bi-three-dots text-black"></i> Diğer İşlemler</button>
         </li>
     </ul>
     <div class="tab-content" id="accountTabsContent">
@@ -253,8 +253,8 @@
             <div class="col">
                 <ul class="list-group mb-3">
                     <li class="list-group-item active" aria-current="true">Her Yerden Oturumunu Kapat</li>
-                    <li class="list-group-item"><a class="link-primary link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/logout-all"><i class="bi bi-person-fill-x"></i> Tüm Oturumlarından Çıkış Yap</a></li>
-                    <li class="list-group-item">Tüm cihazlardan çıkış yapılır.</li>
+                    <li class="list-group-item"><a class="link-success link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/logout-all"><i class="bi bi-person-fill-x"></i> Tüm Oturumlarından Çıkış Yap</a></li>
+                    <li class="list-group-item">Tüm cihazlardan çıkış yapılır</li>
                 </ul>
             </div>
         </div>
@@ -264,7 +264,7 @@
             <div class="col">
                 <ul class="list-group mb-3">
                     <li class="list-group-item active" aria-current="true">Gizlilik Politikası</li>
-                    <li class="list-group-item"><a class="link-success link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/privacy-policies"><i class="bi bi-incognito"></i> Gizlilik Politikası</a></li>
+                    <li class="list-group-item"><a class="link-primary link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="/privacy-policies"><i class="bi bi-incognito"></i> Gizlilik Politikası</a></li>
                 </ul>
 
                 <ul class="list-group">
