--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,6 +19,15 @@
     <link rel="icon" type="image/x-icon" href="/assets/icons/ekinnsite_logo.ico">
     <style>body{padding-top: 5rem !important;}</style>
     <script src="/assets/js/header.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7FVB79GM3G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-7FVB79GM3G');
+    </script>
 </head>
 <body>
     <nav class="main-navbar navbar fixed-top navbar-expand-lg">
