--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/assets/css/books.css">
 <main class="container-md py-4">
     <div class="container-fluid">
         <h1><%= "Tüm Kitaplar (" + (books.length > 0 ? books.length + ' adet)' : 'Hiç Kitap Yok)') %></h1>
@@ -26,38 +27,37 @@
                     <btn class="btn print-btn bg-primary text-light w-100" role="button"><i class="bi bi-printer"></i> Listeyi Yazdır</btn>
                 </div>
             </div>
-            <ul class="list-group rounded-3 print">
+            <div class="books-field row print my-2">
             <% books.forEach((book) => { %>
-                <li class="list-group-item p-4">
-                    <div class="row">
-                        <div class="col-8 col-sm-7 col-md-6 text-start">
-                            <div class="row">
-                                <div class="col-12"><strong>Kitap Adı: </strong><%= book.name %></div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12"><strong>Yazar: </strong><%= book.author %></div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12"><strong>Kategori: </strong><%= book.category_name %></div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12"><strong>Eklenme Tarihi: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></div>
-                            </div>
-                        </div>
-                        <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
-                            <div class="row d-flex flex-column flex-sm-row justify-content-end align-items-center g-1">
-                                <div class="col">
-                                    <a href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>" class="btn bg-success" title="Kitabı Görüntüle"><i class="bi bi-box-arrow-right text-light"></i></a>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card no-drag">
+                        <a class="stretched-link" href="/books/<%= toUrlString(book.author) %>/<%= toUrlString(book.name) %>-b<%= book.id %>">
+                            <div class="card-body">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <img src="/assets/img/book.png" class="card-img-top" alt="<%= book.name %>">
+                                </div>
+                                <h5 class="card-title"><%= book.name %></h5>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <strong>Yazar: </strong><span class="card-author"><%= book.author %></span>
+                                    </div>
+                                    <div class="col-12">
+                                        <strong>Kategori: </strong><span class="card-category"><%= book.category_name %></span>
+                                    </div>
+                                    <div class="col-12">
+                                        <strong>Eklenme Tarihi: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
-                </li>
+                </div>
+                
             <% }) %>
-            </ul>
+            </div>
         <% } %>
 
     </div>
 </main>
-
+<script src="/assets/js/books.js"></script>
 <script src="/assets/js/error.js"></script>
