--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -21,6 +21,7 @@
             </div>
         <% } %>
 
+        <div style="margin: 100px 0;"></div>
         <% if(books.length > 0) { %>
             <div class="row my-2 text-end">
                 <div class="col">
