Added Error Page Redirect Counter

--- a/src/views/account.ejs
+++ b/src/views/account.ejs
@@ -277,6 +277,6 @@
     </div>
     </div>
 </main>
-<script src="/assets/js/error.js"></script>
+<script src="/assets/js/alert.js"></script>
 <script src="/assets/js/account.js"></script>
 <script src="/assets/js/passwordShowHide.js"></script>
