--- a/src/views/admin/users.ejs
+++ b/src/views/admin/users.ejs
@@ -41,5 +41,5 @@
         </div>
     <% } %>
 </main>
-<script src="/assets/js/error.js"></script>
+<script src="/assets/js/alert.js"></script>
 <script src="/assets/js/tableSearch.js"></script>
