--- a/src/views/books.ejs
+++ b/src/views/books.ejs
@@ -64,4 +64,4 @@
     </div>
 </main>
 <script src="/assets/js/books.js"></script>
-<script src="/assets/js/error.js"></script>
+<script src="/assets/js/alert.js"></script>
