--- a/src/views/error/error.ejs
+++ b/src/views/error/error.ejs
@@ -18,9 +18,13 @@
             <div class="col"><p class="fs-1"><%= message %></p></div>
         </div>
         <div class="row">
+            <div class="col-12"><span class="redirect-timer">10</span> saniye içinde ana sayfaya yönlendirileceksiniz</div>
+        </div>
+        <div class="row">
             <div class="col-12 col-md-auto mx-auto my-5">
                 <a class="btn btn-primary btn-open-icon w-100" href="/" role="button">Ana Sayfaya Dön</a>
             </div>
         </div>
     </div>
 </main>
+<script src="/assets/js/error.js"></script>
