--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -71,5 +71,5 @@
     </div>
 </main>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-<script src="/assets/js/error.js"></script>
+<script src="/assets/js/alert.js"></script>
 <script src="/assets/js/passwordShowHide.js"></script>
