Updated Admin Panel

--- a/src/views/admin/admin-panel.ejs
+++ b/src/views/admin/admin-panel.ejs
@@ -32,6 +32,18 @@
                         <i class="bi bi-chat-left-text"></i> Yorumlar
                     </a>
                 </li>
+                <!-- Servisler Menüsü (Açılır) -->
+                <li class="nav-item">
+                    <a class="nav-link d-flex justify-content-between" href="#servicesMenu" data-bs-toggle="collapse" aria-expanded="false">
+                        <span><i class="bi bi-tools"></i> Servisler </span>
+                        <i class="bi bi-caret-down-fill"></i>
+                    </a>
+                    <ul class="collapse" id="servicesMenu">
+                        <li><a class="nav-link" href="https://www.google.com/adsense/new/u/2/pub-9050645484930137/onboarding"><i class="bi bi-google"></i> Google Adsense</a></li>
+                        <li><a class="nav-link" href="https://analytics.google.com/analytics/web/?authuser=2#/p470459256/reports/reportinghub?params=_u..nav%3Dmaui"><i class="bi bi-bar-chart-fill"></i> Google Analytics</a></li>
+                        <li><a class="nav-link" href="https://search.google.com/u/2/search-console?resource_id=sc-domain%3Abook.ekinn.site"><i class="bi bi-search"></i> Google Search Console</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://book.ekinn.site/sitemap.xml" target="_blank">
                         <i class="bi bi-rss-fill" style="color: #f26522;"></i> Site Haritası
