--- a/src/public/assets/css/main.css
+++ b/src/public/assets/css/main.css
@@ -42,7 +42,6 @@ body {
 /* Kaydırma çubuğunun "track" (arka plan) kısmını tanımlar */
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1; /* Track arka plan rengini belirler */
-  border-radius: 10px; /* Kenarları yuvarlatır */
 }
 
 /* Kaydırma çubuğunun üzerine gelindiğinde kulpun rengini değiştirir */
@@ -75,6 +74,11 @@ textarea {
 
 .sidebar {
   height: 100vh;
+  overflow-y: auto;
+}
+.sidebar .nav-link:focus{color: inherit;}
+#servicesMenu {
+  list-style-type: none;
 }
 .sidebar a {
   color: white;
@@ -84,6 +88,7 @@ textarea {
   background-color: #495057;
   color: #f8f9fa;
 }
+
 .navbar {
   background-color: #ffffff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
